fixing bug 201381 - Auto-importing IE favorites with directory entries may take a very long time, CPU usage 100. r=varga, sr=jag, a=brendan